DuPont DevSB/src/objects/Issue__c.object
<CustomObject>
    <description>Object used to submit and track Issues, Ideas, Questions, or Requests for SFDC Administration Team.  Also used for Data Modelling and Project Issues.</description>
    <fields>
        <fullName>Application_Interface__c</fullName>
        <description>Field to identify the application / interface in which the issue occurs</description>
        <inlineHelpText>Field to identify the application / interface in which the issue occurs</inlineHelpText>
        <label>Application / Interface</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>IOD</fullName>
                </value>
                <value>
                    <fullName>Master Data (Customer &amp; Material)</fullName>
                </value>
                <value>
                    <fullName>Salesforce</fullName>
                </value>
                <value>
                    <fullName>SAP BAPI</fullName>
                </value>
                <value>
                    <fullName>SAP PI</fullName>
                </value>
                <value>
                    <fullName>SQL Staging</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <description>This contains the SFDC application (eg CUPS, CLS, etc.) that this Issue relates to. This field should not contain any non-SFDC related applications.</description>
        <inlineHelpText>Fill the related SFDC Application for this issue. If the Issue is not specific to an application or a Standard functionality then select &apos;CRM (Standard Functionality)&apos;</inlineHelpText>
        <label>Application</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BI-EMEA Complaint Handling</fullName>
                </value>
                <value>
                    <fullName>BI-EMEA E-registration for Montelli</fullName>
                </value>
                <value>
                    <fullName>BI EMEA E-Warranty</fullName>
                </value>
                <value>
                    <fullName>CRM (Standard functionality)</fullName>
                </value>
                <value>
                    <fullName>Customer On-boarding</fullName>
                </value>
                <value>
                    <fullName>Customer Service Console</fullName>
                </value>
                <value>
                    <fullName>Digital Sales Aid - iPad App</fullName>
                </value>
                <value>
                    <fullName>DIMC Call handling</fullName>
                </value>
                <value>
                    <fullName>DocuSign/Drawloop</fullName>
                </value>
                <value>
                    <fullName>DPS-CIC Interface</fullName>
                </value>
                <value>
                    <fullName>DPS-CP for Salesforce</fullName>
                </value>
                <value>
                    <fullName>DPS GetFeedback</fullName>
                </value>
                <value>
                    <fullName>DPS Kevlar Automotive Hose Selector</fullName>
                </value>
                <value>
                    <fullName>DPT-IPP Value Chain Service</fullName>
                </value>
                <value>
                    <fullName>DPT-IPP Value Chain Service Platform</fullName>
                </value>
                <value>
                    <fullName>DPT Nomex Portal</fullName>
                </value>
                <value>
                    <fullName>Electric Arc</fullName>
                </value>
                <value>
                    <fullName>Eloqua</fullName>
                </value>
                <value>
                    <fullName>EMEA-DPT Lead Scoring</fullName>
                </value>
                <value>
                    <fullName>Global Dealer/Locator</fullName>
                </value>
                <value>
                    <fullName>Partner Portal</fullName>
                </value>
                <value>
                    <fullName>Price Approval</fullName>
                </value>
                <value>
                    <fullName>Product Finder</fullName>
                </value>
                <value>
                    <fullName>Product Scheduling</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <description>Status of the Approval</description>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                </value>
                <value>
                    <fullName>Denied</fullName>
                </value>
                <value>
                    <fullName>Not Started</fullName>
                    <default>true</default>
                    <label>Not Started</label>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assigned_to_QA__c</fullName>
        <label>Assigned to QA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business_Process_Category__c</fullName>
        <label>Business Process Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sales Operations</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <description>The category defines the nature of the issue 
An issue is Category 4, if there is  Degradation or Loss of Individual Productivity, 
Application Performance Degradation Which Negatively Impacts Personal or Workgroup Productivity or it is related to Personal Application outage	
An issue is Category 5 if it is anew service request</description>
        <inlineHelpText>If the issue is related to a break/fix impacting the Business, use Cat 3
If the issue is related to a break/fix impacting an Individual, use Cat 4
If the issue is related to a new service request, use Cat 5</inlineHelpText>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cat 4</fullName>
                </value>
                <value>
                    <fullName>Cat 5</fullName>
                    <default>true</default>
                    <label>Cat 5</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Classification__c</fullName>
        <label>Classification</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Adhoc</fullName>
                </value>
                <value>
                    <fullName>Correct (Break/Fix)</fullName>
                </value>
                <value>
                    <fullName>Data migration/Go-live</fullName>
                </value>
                <value>
                    <fullName>Enhance (Design)</fullName>
                </value>
                <value>
                    <fullName>Routine</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Closing_Type__c</fullName>
        <description>Reason for closing the issue :
Tasks Complete: Action Taken 
Future Roadmap:  Functionality in SFDC does not meet DuPont requirements at this time   
Project in Progress:  Part of a larger CRM project
Feasibility:  Not feasible to complete at this time
Out of Scope: Beyond the scope of project
Training Planned: Will cover with Training
Current Solution Satisfactory: Current solution satisfies the greater need
No Response: No Response from Submitter</description>
        <inlineHelpText>Future Roadmap:  SFDC Functionality currently unable to meet DuPont requirement
Project in Progress:  Already part of a larger project
Feasibility:  Not feasible to change at this time
Tasks Complete: Action taken</inlineHelpText>
        <label>Closing Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Current Solution Satisfactory</fullName>
                </value>
                <value>
                    <fullName>Feasibility</fullName>
                </value>
                <value>
                    <fullName>Future Roadmap</fullName>
                </value>
                <value>
                    <fullName>Out of Scope</fullName>
                </value>
                <value>
                    <fullName>Project in Progress</fullName>
                </value>
                <value>
                    <fullName>Tasks Complete</fullName>
                </value>
                <value>
                    <fullName>Training Planned</fullName>
                </value>
                <value>
                    <fullName>Errors Corrected</fullName>
                </value>
                <value>
                    <fullName>No Response</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>Comments related to Project Review (i.e. Course correction or Next Steps)</description>
        <inlineHelpText>Comments related to Project Review (i.e. Course correction or Next Steps)</inlineHelpText>
        <label>Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Date_Accepted__c</fullName>
        <description>This field is the date when the status of the issue go changed to Accepted.
Auto-populated as TODAY() for the record type &quot;Issues &amp; Ideas&quot; when status is changed to Accepted. Created to capture the SLA metric &quot;Quality of Response&quot; for COO purposes</description>
        <label>Date Accepted</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Closed__c</fullName>
        <label>Date Closed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Discussion_And_Updates__c</fullName>
        <description>Discussion may include Recommended Solutions, Actions, Updates or Next Steps.</description>
        <inlineHelpText>Recommended Solutions, Actions, Updates or Next Steps.   Enter Name &amp; Date in front of comments.</inlineHelpText>
        <label>Discussion And Updates</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EscalatedDate__c</fullName>
        <description>When Change the status to Escalated from Accepted,Date will be populated through Workflow Rule</description>
        <inlineHelpText>When Change the status to Escalated from Accepted,Date will be populated through Workflow Rule</inlineHelpText>
        <label>EscalatedDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Impact__c</fullName>
        <label>Impact</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Issue_Details__c</fullName>
        <description>Rich Text field for copying in details from Emails, Pictures, etc.</description>
        <inlineHelpText>Rich Text field for copying in details from Emails, Pictures, etc.</inlineHelpText>
        <label>Issue Details</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Issue_Type__c</fullName>
        <description>Used to distinguish the Issues raised for the IT Support, or other Business Support</description>
        <inlineHelpText>If it is an IT related issue or Business related issue</inlineHelpText>
        <label>Issue Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>IT</fullName>
                </value>
                <value>
                    <fullName>Digital Marketing</fullName>
                </value>
                <value>
                    <fullName>IT-Price Authorization</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Issue__c</fullName>
        <displayFormat>IS ID-{00000000}</displayFormat>
        <label>Issue #</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Legacy_One_DuPont_SFID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This field is populated with the legacy One DuPont SF ID and was used during the split to map related records during the split and insert process to maintain the migrated record’s parent child record relationships.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is the pre-split original 18 digit Salesforce ID of this record that came from the original One Dupont Salesforce instance before the business units were separated. Its is case sensitive and unique.</inlineHelpText>
        <label>Legacy One DuPont SFID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Login_As_Access__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checking this, be sure to add the names of the Users who are granting login access to the Issue Details field.</inlineHelpText>
        <label>Login-As Access</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MetadataType__c</fullName>
        <description>Metadata Asset Type to filter Metadata Lookup</description>
        <inlineHelpText>Metadata Asset Type to filter Metadata Lookup</inlineHelpText>
        <label>Metadata Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>APEX_CODE</fullName>
                </value>
                <value>
                    <fullName>FIELD</fullName>
                </value>
                <value>
                    <fullName>LAYOUT</fullName>
                </value>
                <value>
                    <fullName>PICKLISTENTRY</fullName>
                </value>
                <value>
                    <fullName>RECORDTYPE</fullName>
                </value>
                <value>
                    <fullName>SOBJECT</fullName>
                </value>
                <value>
                    <fullName>ValidationRule</fullName>
                </value>
                <value>
                    <fullName>VISUALFORCE</fullName>
                </value>
                <value>
                    <fullName>WORKFLOW</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Metadata__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Related Metadata</description>
        <inlineHelpText>Enter Related Matadata</inlineHelpText>
        <label>Related Metadata</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.MetadataType__c</field>
                <operation>equals</operation>
                <valueField>Metadata__c.Type__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Metadata__c</referenceTo>
        <relationshipLabel>Issues</relationshipLabel>
        <relationshipName>Issues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NoOfDaysApprovedByReviewTeam__c</fullName>
        <formula>IF(ISPICKVAL(Status__c,&quot;Approved by Review Team&quot;),((NOW()-lastTimeStatusChanged__c)*24)+ TotalApprovedByReveiwTeamHours__c, TotalApprovedByReveiwTeamHours__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TotalNoOfDaysApprovedByReviewTeam</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NoOfDaysEscalated__c</fullName>
        <description>NoOfdaysEscalated</description>
        <formula>IF(ISPICKVAL(Status__c,&quot;Escalated&quot;),
( NOW()- lastTimeStatusChanged__c)*24 + TotalNoOfEscalatedHours__c, TotalNoOfEscalatedHours__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TotalNoOfHoursEscalated</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NoOfDaysInProgess__c</fullName>
        <description>No Of Days Issue is in In Progress</description>
        <formula>IF(ISPICKVAL(Status__c,&quot;In Progress&quot;),((NOW()-lastTimeStatusChanged__c)*24)+ TotalNoOfHoursInProgress__c, TotalNoOfHoursInProgress__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TotalNoOfHoursInProgess</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NoOfDaysNotStarted__c</fullName>
        <formula>IF( TEXT(Status__c)=&quot;Not Started&quot; ,((NOW()-lastTimeStatusChanged__c)*24)+ TotalNoOfHoursNotStarted__c, TotalNoOfHoursNotStarted__c)</formula>
        <label>TotalNoOfHoursNotStarted</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NoOfDaysOfAcceptance__c</fullName>
        <formula>IF(TEXT(Status__c)= &quot;Accepted&quot;,((NOW()-lastTimeStatusChanged__c)*24)+ TotalNoOFAcceptedHours__c,TotalNoOFAcceptedHours__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TotalNoOfHoursOfAcceptance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NoOfDaysOnHold__c</fullName>
        <formula>IF(TEXT(Status__c)= &quot;On Hold&quot;,((NOW()-lastTimeStatusChanged__c)*24)+ TotalNoOfOnHoldHours__c, TotalNoOfOnHoldHours__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TotalNoOfHoursOnHold</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NoOfDaysWaiting__c</fullName>
        <formula>IF(TEXT(Status__c)= &quot;Waiting&quot;,((NOW()-lastTimeStatusChanged__c)*24)+ TotalNoOfHoursWaiting__c, TotalNoOfHoursWaiting__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TotalNoOfHoursWaiting</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OnHoldDate__c</fullName>
        <description>Date is populated through workflow when Status is on Hold</description>
        <label>OnHoldDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                    <default>true</default>
                    <label>Medium</label>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <description>Name of the Program or key Project this request is needed for</description>
        <label>Program</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BI</fullName>
                </value>
                <value>
                    <fullName>BI-ENV</fullName>
                </value>
                <value>
                    <fullName>BI-MEX</fullName>
                </value>
                <value>
                    <fullName>BI-SURF</fullName>
                </value>
                <value>
                    <fullName>CORE</fullName>
                </value>
                <value>
                    <fullName>CS</fullName>
                </value>
                <value>
                    <fullName>DIMC</fullName>
                </value>
                <value>
                    <fullName>DIMC-LA</fullName>
                </value>
                <value>
                    <fullName>DPT</fullName>
                </value>
                <value>
                    <fullName>DPT-Aramids</fullName>
                </value>
                <value>
                    <fullName>DPT-IPP</fullName>
                </value>
                <value>
                    <fullName>DPT-NOW</fullName>
                </value>
                <value>
                    <fullName>IT</fullName>
                </value>
                <value>
                    <fullName>M&amp;S</fullName>
                </value>
                <value>
                    <fullName>M&amp;S-IT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QA_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This check box is useful for the QA team to provide their approval to move changes successfully to Production</description>
        <label>QA Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Assigned QA as per issue auto assignment</description>
        <label>QA</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Issues2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <description>Regional scope of this Data need</description>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>North America</fullName>
                </value>
                <value>
                    <fullName>Latin America</fullName>
                </value>
                <value>
                    <fullName>Asia Pacific</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RelatedUser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to user experiencing exception</description>
        <label>RelatedUser</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Issues1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Initiative__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Initiative this Issue is related to</description>
        <inlineHelpText>Initiative this Issue is related to</inlineHelpText>
        <label>Related Initiative</label>
        <referenceTo>Initiative__c</referenceTo>
        <relationshipName>Issues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Issue__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Issue related to this issue</description>
        <label>Related Issue</label>
        <referenceTo>Issue__c</referenceTo>
        <relationshipLabel>Related Issues</relationshipLabel>
        <relationshipName>Related_Issues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>CRM IT Project or Program related to this issue or request</description>
        <inlineHelpText>Project or Program or related to this issue/request</inlineHelpText>
        <label>Related Project</label>
        <referenceTo>CRM_IT_Project__c</referenceTo>
        <relationshipLabel>Project Issues</relationshipLabel>
        <relationshipName>Project_Issues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_project2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related project2</label>
        <referenceTo>CRM_IT_Project__c</referenceTo>
        <relationshipLabel>Issues (Related project2)</relationshipLabel>
        <relationshipName>Issues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Resolution__c</fullName>
        <label>Resolution</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Review_Actual_Date__c</fullName>
        <description>Actual date review was held</description>
        <inlineHelpText>Date of Review Session</inlineHelpText>
        <label>Review Actual Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SFDC_Access_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SFDC Access Request</label>
        <referenceTo>SFDC_Access_Request__c</referenceTo>
        <relationshipLabel>Issues</relationshipLabel>
        <relationshipName>Issues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SFDC_Instance__c</fullName>
        <description>The SFDC Organizational Instance associated with this Issue</description>
        <inlineHelpText>Please select the SFDC Organizational instance (or environment) associated with this Issue.</inlineHelpText>
        <label>SFDC Instance</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>CRM</fullName>
                    <default>true</default>
                    <label>CRM</label>
                </value>
                <value>
                    <fullName>Utility (PA)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Severity__c</fullName>
        <label>Severity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <description>Stage of this specific Data request in our Data Model upgrade process</description>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Plan</fullName>
                </value>
                <value>
                    <fullName>Design</fullName>
                </value>
                <value>
                    <fullName>Build</fullName>
                </value>
                <value>
                    <fullName>Validate</fullName>
                </value>
                <value>
                    <fullName>Deploy</fullName>
                </value>
                <value>
                    <fullName>Control</fullName>
                </value>
                <value>
                    <fullName>Receive</fullName>
                </value>
                <value>
                    <fullName>Investigate</fullName>
                </value>
                <value>
                    <fullName>Resolve</fullName>
                </value>
                <value>
                    <fullName>Close</fullName>
                </value>
                <value>
                    <fullName>End</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Continue</fullName>
                </value>
                <value>
                    <fullName>Delayed</fullName>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                    <color>#0B6FCE</color>
                    <label>Not Started</label>
                </value>
                <value>
                    <fullName>Accepted</fullName>
                    <color>#78C953</color>
                    <label>Accepted</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                    <color>#E27001</color>
                    <label>In Progress</label>
                </value>
                <value>
                    <fullName>DuPont Review</fullName>
                    <color>#A845DC</color>
                    <label>DuPont Review</label>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                    <color>#F3D904</color>
                    <label>On Hold</label>
                </value>
                <value>
                    <fullName>Waiting</fullName>
                    <color>#A53711</color>
                    <label>Waiting</label>
                </value>
                <value>
                    <fullName>Completed</fullName>
                    <color>#33FF33</color>
                    <label>Completed</label>
                </value>
                <value>
                    <fullName>Escalated</fullName>
                    <color>#FF0000</color>
                    <label>Escalated</label>
                </value>
                <value>
                    <fullName>Reassigned</fullName>
                    <color>#419249</color>
                    <label>Reassigned</label>
                </value>
                <value>
                    <fullName>Approved by Review Team</fullName>
                    <color>#B6E32E</color>
                    <label>Approved by Review Team</label>
                </value>
                <value>
                    <fullName>Not Applicable/System Hard Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>